--- a/lab06/README.org
+++ b/lab06/README.org
@@ -1,8 +1,9 @@
-# User Management
+* User Management
 
 A classic take on Django User Admin.
 
-To install, clone this repo and inside its root folder:
+
+*** To install, clone this repo and inside its root folder:
 #+BEGIN_SRC bash
   python3 -m venv venv
   source .venv/bin/activate
@@ -24,7 +25,7 @@ To make social login work, follow the oAuth2 examples from Github and
 Google Cloud docs and change your .env entries.
 
 
-TODO:
+*** TODO:
 - [ ] Continue from: https://dev.to/earthcomfy/django-update-user-profile-33ho
 - [ ] Docker file
 - [ ] Docker compose file
